--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -150,6 +150,7 @@
   "sending_button": "Invio...",
   "invoice_expired_error": "La fattura è scaduta e non può essere pagata",
   "amountless_invoice_error": "Fattura senza importo non supportata. Richiedere una fattura con un importo specifico.",
+  "payment_sent_status": "Pagamento inviato - Stato: {status}",
   "confirm_no_session_error": "Nessuna sessione attiva",
   "confirm_no_wallet_error": "Nessun portafoglio principale disponibile",
   "payment_pending_hold": "Pagamento in attesa - Fattura di blocco rilevata",
