--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -68,7 +68,7 @@
   "failed_label": "Fallito",
   "loading_transactions_error_prefix": "Errore nel caricamento delle transazioni: ",
 
-  "crear_lnaddress_label": "o anche puoi creare un :",
+  "create_lnaddress_label": "o anche puoi creare un :",
   "lightning_address_title": "Indirizzo Lightning",
   "loading_address_text": "Caricamento indirizzo...",
   "your_lightning_address_label": "Il tuo indirizzo Lightning:",
@@ -89,7 +89,7 @@
   "logout_confirm_button": "Disconnetti",
   
   "receive_title": "Ricevi",
-  "crear_factura_label": "Crea una fattura per ricevere pagamenti direttamente nel tuo portafoglio",
+  "create_invoice_label": "Crea una fattura per ricevere pagamenti direttamente nel tuo portafoglio",
   "amount_sats_label": "Importo richiesto",
   "amount_label": "Importo",
   "currency_label": "Valuta",
