--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -68,7 +68,7 @@
   "failed_label": "Falhada",
   "loading_transactions_error_prefix": "Erro ao carregar transações: ",
 
-  "crear_lnaddress_label": "ou também pode criar um :",
+  "create_lnaddress_label": "ou também pode criar um :",
   "lightning_address_title": "Endereço Lightning",
   "loading_address_text": "Carregando endereço...",
   "your_lightning_address_label": "O seu endereço Lightning:",
@@ -89,7 +89,7 @@
   "logout_confirm_button": "Terminar Sessão",
   
   "receive_title": "Receber",
-  "crear_factura_label": "Crie uma fatura para receber pagamentos diretamente na sua carteira",
+  "create_invoice_label": "Crie uma fatura para receber pagamentos diretamente na sua carteira",
   "amount_sats_label": "Solicitar Quantia",
   "amount_label": "Quantia",
   "currency_label": "Moeda",
