--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -172,6 +172,9 @@
   
   "send_to_title": "Enviar a",
   "clear_button": "C",
+  "invoice_cleared_message": "Factura limpiada",
+  "clear_invoice_button": "Limpiar factura",
+  "invoice_copied_message": "Factura copiada",
   "decimal_button": ".",
   "calculating_text": "calculando...",
   "loading_rates_text": "Loading rates...",
@@ -206,6 +209,7 @@
   "sending_button": "Enviando...",
   "invoice_expired_error": "La factura ha expirado y no se puede pagar",
   "amountless_invoice_error": "Factura sin monto no soportada. Solicite una factura con un monto específico.",
+  "invoice_amount_label": "Factura: {amount}",
   "payment_sent_status": "Pago enviado - Estado: {status}",
   "confirm_no_session_error": "Sin sesión activa",
   "confirm_no_wallet_error": "No hay wallet principal disponible",
