--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -172,6 +172,9 @@
   
   "send_to_title": "Send to",
   "clear_button": "C",
+  "invoice_cleared_message": "Invoice cleared",
+  "clear_invoice_button": "Clear invoice",
+  "invoice_copied_message": "Invoice copied",
   "decimal_button": ".",
   "calculating_text": "calculating...",
   "loading_rates_text": "Loading rates...",
@@ -206,6 +209,12 @@
   "sending_button": "Sending...",
   "invoice_expired_error": "The invoice has expired and cannot be paid",
   "amountless_invoice_error": "Invoice without amount not supported. Please request an invoice with a specific amount.",
+  "invoice_amount_label": "Invoice: {amount}",
+  "@invoice_amount_label": {
+    "placeholders": {
+      "amount": {"type": "String"}
+    }
+  },
   "payment_sent_status": "Payment sent - Status: {status}",
   "@payment_sent_status": {
     "placeholders": {
