fix: improve localization and timer handling
- Fix create_lnaddress_label formatting in de, it, pt
- Add invoice_amount_label placeholder metadata in es template
- Use localization for balance label and create_lnaddress
- Add timer cleanup for invoice payment monitoring
- Revert SDK version to >=3.0.0

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -68,7 +68,7 @@
   "failed_label": "Fehlgeschlagen",
   "loading_transactions_error_prefix": "Fehler beim Laden der Transaktionen: ",
 
-  "create_lnaddress_label": "oder Sie können auch erstellen :",
+  "create_lnaddress_label": "oder Sie können auch eine erstellen:",
   "lightning_address_title": "Lightning-Adresse",
   "loading_address_text": "Lade Adresse...",
   "your_lightning_address_label": "Ihre Lightning-Adresse:",
