--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -210,6 +210,13 @@
   "invoice_expired_error": "La factura ha expirado y no se puede pagar",
   "amountless_invoice_error": "Factura sin monto no soportada. Solicite una factura con un monto específico.",
   "invoice_amount_label": "Factura: {amount}",
+  "@invoice_amount_label": {
+    "placeholders": {
+      "amount": {
+        "type": "Object"
+      }
+    }
+  },
   "payment_sent_status": "Pago enviado - Estado: {status}",
   "confirm_no_session_error": "Sin sesión activa",
   "confirm_no_wallet_error": "No hay wallet principal disponible",
