--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -67,7 +67,8 @@
   "pending_label": "In attesa",
   "failed_label": "Fallito",
   "loading_transactions_error_prefix": "Errore nel caricamento delle transazioni: ",
-  
+
+  "create_lnaddress_label": "o anche puoi creare un:",
   "lightning_address_title": "Indirizzo Lightning",
   "loading_address_text": "Caricamento indirizzo...",
   "your_lightning_address_label": "Il tuo indirizzo Lightning:",
@@ -88,6 +89,7 @@
   "logout_confirm_button": "Disconnetti",
   
   "receive_title": "Ricevi",
+  "create_invoice_label": "Crea una fattura per ricevere pagamenti direttamente nel tuo portafoglio",
   "amount_sats_label": "Importo richiesto",
   "amount_label": "Importo",
   "currency_label": "Valuta",
@@ -116,6 +118,9 @@
   
   "send_to_title": "Invia a",
   "clear_button": "C",
+  "invoice_cleared_message": "Fattura cancellata",
+  "clear_invoice_button": "Cancella fattura",
+  "invoice_copied_message": "Fattura copiata",
   "decimal_button": ".",
   "calculating_text": "calcolo...",
   "loading_rates_text": "Caricamento tassi...",
@@ -150,6 +155,7 @@
   "sending_button": "Invio...",
   "invoice_expired_error": "La fattura è scaduta e non può essere pagata",
   "amountless_invoice_error": "Fattura senza importo non supportata. Richiedere una fattura con un importo specifico.",
+  "invoice_amount_label": "Fattura: {amount}",
   "payment_sent_status": "Pagamento inviato - Stato: {status}",
   "confirm_no_session_error": "Nessuna sessione attiva",
   "confirm_no_wallet_error": "Nessun portafoglio principale disponibile",
